# game-of-life

./: Cargo.toml  README.md
src/: camera.rs  constants.rs  main.rs  resources.rs  states.rs
src/world/: components.rs  mod.rs
