[package]
name = "game-of-life"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Conway's Game of Life"
readme = "README.md"
homepage = "https://github.com/Mixerou/game-of-life"
repository = "https://github.com/Mixerou/game-of-life"
license = "MIT"

[dependencies]
itertools = "0.12.1"
oorandom = "11.1.3"
rayon = "1.10.0"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_winit", "multi-threaded"]
